# checked-command

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  design_decision.md
.notes/: README.md  SPAWN_DESIGN.md
examples/: mock.rs  readme.rs
proptest-regressions/: lib.txt  return_settings.txt  sys.txt
src/: env.rs  exit_status.rs  ext.rs  lib.rs  mock.rs  output_mapping.rs  pipe.rs  return_settings.rs  spawn.rs  sys.rs  utils.rs  wrapper.rs
src/mock/: interfaces.rs  mock_impls.rs  sys_impls.rs
test_helper_src/: feedback_executable.rs
tests/: integration_test.rs  linux.rs  unix.rs  unix_redirect.rs  windows.rs
