[package]
name = "checked_command"
version = "0.3.0"
authors = ["Philipp korber <philipp@korber.dev>"]
description = "Better testable alternate version of  `std::process::Command`"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dathinab/checked-command"
readme = "./README.md"
categories = ["os"]
keywords = [
    "Command", "Child", "ExitStatus", "mock", "process"
]
edition = "2018"

[features]
default = []

[dependencies]
thiserror = "1.0.23"

[dev-dependencies]
libc = "0.2.82"
proptest = "0.10.1"
