[package]
name = "mapped-command"
version = "0.4.0"
authors = ["Philipp korber <philipp@korber.dev>"]
description = "Alternate version of `std::process::Command` which maps outputs a custom results and checks the exit status."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dathinab/checked-command"
readme = "./README.md"
categories = ["os"]
keywords = [
    "Command", "Child", "ExitStatus", "mock", "process"
]
edition = "2018"

[features]
default = []
allow-unsafe = []
mocking = ["once_cell", "allow-unsafe"]

[dependencies]
once_cell = {version="1.7.2", optional=true}
thiserror = "1.0.23"

[dev-dependencies]
libc = "0.2.82"
proptest = "1.0.0"
proptest-derive = "0.3.0"
static_assertions = "1.1.0"

[[example]]
name = "mock"
required-features = ["mocking"]
